# agentscout

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/workflows/: ci.yml  mutants.yml  release.yml
docs/dogfood/: v0.5.8.md
src/: index.html  inspector.html  review.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: clustering.rs
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml  README.md
src-tauri/fuzz/fuzz_targets/: link_query_parser.rs
src-tauri/icons/: icon.icns
src-tauri/resources/tesseract/: README.md
src-tauri/src/: lib.rs  main.rs  secrets.rs
src-tauri/src/analysis/: cluster.rs  cost.rs  mod.rs  orchestrator.rs  prompts.rs  scoring.rs  synthesize.rs
src-tauri/src/anthropic/: fixture.rs  live.rs  mock.rs  mod.rs
src-tauri/src/capture/: activity.rs  blocklist.rs  mod.rs  scheduler.rs  screenshot.rs
src-tauri/src/config/: mod.rs
src-tauri/src/conversation/: anthropic.rs  mod.rs  setup.rs  templates.rs  tier_calibration.rs
src-tauri/src/email/: disposition_server.rs  gmail.rs  link_signer.rs  mod.rs  oauth.rs  oauth_flow.rs  template.rs
src-tauri/src/ocr/: mod.rs  tesseract_cli.rs  thumbnail.rs
src-tauri/src/storage/: crypto.rs  mod.rs  schema.rs
src-tauri/templates/: email.html.tera
src-tauri/tests/: anthropic_http.rs  e2e_credentials_path.rs  frontend_structure.rs  gmail_http.rs  oauth_http.rs  ocr_goldens.rs  orchestrator_integration.rs  pipeline_integration.rs  pipeline_replay.rs  storage_integration.rs
src-tauri/tests/fixtures/cycle-solo-engineer/: README.md  captures.json  manifest.json  prior-dispositions.json  tier-definitions.json  user-profile.md
src-tauri/tests/ocr_goldens/: README.md  manifest.json
src/assets/: app.css  app.js  inspector.js  review.js  settings.js
