[package]
name = "agentscout"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A desktop app that observes your work and recommends AI agent opportunities"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Per-OS paths
directories = "5"

# SQLite + migrations
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Crypto
aes-gcm = "0.10"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# OS keychain
keyring = "3"

# Screenshot capture + platform integration
xcap = "0.0.14"
device_query = "2"
active-win-pos-rs = "0.9"
global-hotkey = "0.6"

# HTTP (for future: Anthropic + Gmail)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
futures-util = "0.3"

# Image handling (thumbnails, PNG encoding, WebP for compact thumbnails)
image = { version = "0.25", default-features = false, features = ["png", "webp"] }

# Base64 (for inspector data URLs and Anthropic vision payloads)
base64 = "0.22"

# Async traits (for OcrEngine, AnthropicClient)
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "1"

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
