[package]
name = "agentscout-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
agentscout = { path = ".." }

[[bin]]
name = "link_query_parser"
path = "fuzz_targets/link_query_parser.rs"
test = false
doc = false

[workspace]
